--- a/index.html
+++ b/index.html
@@ -4822,7 +4822,7 @@
                     <section id="home-section">
                         <div id="image02" class="image" data-position="center">
                             <span class="frame">
-                                <img src="assets/images/image02.png" alt=""/>
+                                <img src="assets/images/image02.PNG" alt=""/>
                             </span>
                         </div>
                         <div id="container01" class="container default">
@@ -7241,3 +7241,4 @@
         </script>
     </body>
 </html>
+
